# rustrunner

./: Cargo.toml
rust-ts-ipc/: .gitignore  Cargo.toml  README.md  README_GENERATOR.md  build.sh  demo.sh  package-lock.json  test_integration.sh
rust-ts-ipc/src/: generator_client.rs  main.rs
rust-ts-ipc/ts-app/: package-lock.json  package.json  tsconfig.json
rust-ts-ipc/ts-app/src/: generator-bridge.ts  generator-simple.ts  index.ts
src/: build.rs  corpus.rs  corpus_aspect.rs  coverage.rs  generator_client.rs  lib.rs  main.rs
src/reprl/: reprl.c  reprl.h
