[package]
name = "dfuzz"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
futures = "0.3.28"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.8"
structopt = "0.3"
rand = "0.8"
chrono = "0.4"
fxhash = "0.2"
libc = "0.2"
lazy_static = "1.4.0"
md5 = "0.7.0"
term_size = "0.3"
bincode = "1.3"
sanitize-filename = "0.5"
ctrlc = "3.4.0"
regex = "1.9.1"
tempfile = "3.8"

[build-dependencies]
cc = "1.0.83" 
