[package]
name = "rust_ts_ipc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_ts_ipc"
path = "src/main.rs"

[[bin]]
name = "generator_client"
path = "src/generator_client.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
